<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:background="@color/lightblue">

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/Converter"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginLeft="76dp"/>
    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/r5"
        android:backgroundTint="@color/white"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center">
        <EditText
            android:id="@+id/EditTextOne"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:hint="@string/vvod"
            android:layout_marginLeft="10dp"/>
    </FrameLayout>
    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/Is"
        android:layout_marginTop="263dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/V"
        android:layout_marginTop="263dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginLeft="195dp"/>
    <FrameLayout
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:background="@drawable/r5"
        android:backgroundTint="@color/white"
        android:layout_marginTop="292dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center">
        <EditText
            android:inputType="text"
            android:id="@+id/EditTextTwo"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:hint="@string/bait"
            android:layout_marginLeft="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:background="@drawable/r5"
        android:backgroundTint="@color/white"
        android:layout_marginTop="292dp"
        android:layout_marginLeft="195dp"
        android:textAlignment="center">
        <EditText
            android:inputType="text"
            android:id="@+id/EditTextThree"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:hint="@string/kilob"
            android:layout_marginLeft="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/r5"
        android:backgroundTint="@color/white"
        android:layout_marginTop="353dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center">
        <EditText
            android:id="@+id/EditTextFour"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:hint="@string/rez"
            android:layout_marginLeft="10dp"/>
    </FrameLayout>

    <Button
        android:id="@+id/Vichislit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/but2"
        android:background="@drawable/radius"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="485dp"
        />
    <Button
        android:id="@+id/Home"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Home"
        android:background="@drawable/radius"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="555dp"
        />
</RelativeLayout>